--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "antd": "^5.10.0",
     "antd-table-saveas-excel": "^2.2.1",
     "axios": "^1.5.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
